# claude_agent_sdk_rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
docs/: API_GUIDE.md  USAGE_ENDPOINT.md
examples/: basic.rs  interactive.rs  new_features.rs  session_resume.rs  usage_tracking.rs  with_callbacks.rs  with_options.rs
src/: callbacks.rs  client.rs  error.rs  lib.rs  parser.rs  query.rs
src/transport/: mod.rs  subprocess.rs
src/types/: agents.rs  content.rs  control.rs  hooks.rs  mcp.rs  messages.rs  mod.rs  options.rs  permissions.rs  plugins.rs  sandbox.rs  usage.rs
tests/: integration_test.rs  test_pretooluse_hook.rs
