[package]
name = "claude-agent-sdk"
version = "1.0.0-rc.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "Rust SDK for Claude Agent - Build production-ready AI agents with Claude"
repository = "https://github.com/yourusername/claude-agent-sdk-rust"
keywords = ["claude", "ai", "agent", "anthropic", "llm"]
categories = ["api-bindings", "development-tools"]
readme = "README.md"

[dependencies]
# Async runtime and process management
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Async streams
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# CLI discovery
which = "6.0"

# Builder pattern for options
typed-builder = "0.18"

# Random for request IDs
rand = "0.8"

# HTTP client for usage API
reqwest = { version = "0.12", features = ["json"] }

# Logging (optional, for SDK internals)
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
env_logger = "0.11"

[features]
default = []
logging = ["log"]
tracing-support = ["tracing"]
